[package]
name = "construct-binary-search-tree-from-preorder-traversal"
version = "0.1.0"
authors = ["Benjamin Shi <aiifabbf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["cached"]
naive = []
cached = []