[package]
name = "find-the-city-with-the-smallest-number-of-neighbors-at-a-threshold-distance"
version = "0.1.0"
authors = ["Benjamin Shi <aiifabbf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["adjacency-matrix"]
adjacency-matrix = []
adjacency-set = []
dijkstra = []