[package]
name = "longest-substring-without-repeating-characters"
version = "0.1.0"
authors = ["Benjamin Shi <aiifabbf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["fast-dp"]
dp = []
fast-dp = []
two-pointers = []