[package]
name = "all-paths-from-source-to-target"
version = "0.1.0"
authors = ["Benjamin Shi <aiifabbf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["backtrack"]
backtrack = []
recursion = []